Bug 90539 - EMF background color
Summary: EMF background color
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-04-10 08:18 UTC by Andras Timar
Modified: 2015-12-17 08:52 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bugdoc (DOCX) (18.49 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2015-04-10 08:18 UTC, Andras Timar
Details
Screenshot with LibreOffice 3.6 and 4.0 (8.66 KB, image/png)
2015-04-10 08:19 UTC, Andras Timar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2015-04-10 08:18:05 UTC
Created attachment 114711 [details]
bugdoc (DOCX)

The attached bugdoc contains an embedded OLE object (MS Paint file). In the document, the embedded OLE object is displayed as an icon, which is EMF. The background of the bitmap should be white/transparent, but it is black in LibreOffice 4.0 and higher.
Comment 1 Andras Timar 2015-04-10 08:19:02 UTC
Created attachment 114712 [details]
Screenshot with LibreOffice 3.6 and 4.0
Comment 2 Andras Timar 2015-04-10 08:22:30 UTC
bibisected, the first bad commit is in the range of a6ac5b2a9e4298f7e187dd42eaa8a8587b1693c9..eb020150e174335a9956f5259ddced0026163373
Comment 3 A (Andy) 2015-04-10 08:29:03 UTC
Reproducible with LO 4.4.1.2, Win 8.1

If the attached file is opened in MSO it is also shown correctly as in LO 3.6.
Comment 4 Matthew Francis 2015-04-13 04:53:40 UTC
I don't have an environment set up to build from that era right now, but from scanning the commits the below seems to be the only real possibility.
Adding Cc: to michael.meeks@collabora.com

commit 44cfc7cb6533d827fd2d6e586d92c61d7d7f7a70
Author: Michael Meeks <michael.meeks@suse.com>
Date:   Tue Oct 9 12:22:23 2012 +0100

    re-base on ALv2 code. Includes (at least) relevant parts of:
[...]
Comment 5 Commit Notification 2015-05-05 07:27:43 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0c58017468abb0ebee3088336e7e7a074e53edee

tdf#90539 special case for EMF placeholder icon of OLE object

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Robinson Tryon (qubit) 2015-12-17 08:52:10 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]