tdf#90539 special case for EMF placeholder icon of OLE object

Change-Id: Id775680d6b2aec1fd84981a72a94fe4934bef003